--- a/manifest.json
+++ b/manifest.json
@@ -5,7 +5,7 @@
   "background_color": "#2196f3",
   "display": "standalone",
   "Scope": "/",
-  "start_url": "/pwa-example",
+  "start_url": "/pwa-example/",
   "icons": [
     {
       "src": "images/icons/icon-72x72.png",
